--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/umesh-lodha-0260b11a1/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.instagram.com/" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
+                    <a href="mailto:umeshlodha394@gmail.com" class="home__social-icon"><i class='bx bx-mail-send' ></i></a>
                     <a href="https://github.com/umeshlodha1" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
@@ -378,7 +378,7 @@
             <p class="footer__title">Umesh Lodha</p>
             <div class="footer__social">
                 <a href="https://www.linkedin.com/in/umesh-lodha-0260b11a1/" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
-                <a href="https://www.instagram.com/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="mailto:umeshlodha394@gmail.com" class="footer__icon"><i class='bx bx-mail-send' ></i></a>
                 <a href="https://github.com/umeshlodha1" class="footer__icon"><i class='bx bxl-github' ></i></a>
             </div>
             <p class="footer__copy">&#169; Umesh Lodha. All rigths reserved</p>
