--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Umesh</span><br></h1>
 
-                    <a href="assets/file/umesh_cv.pdf" download="umesh_cv.pdf" class="button">Download CV</a>
+                    <a href="assets/file/umesh_lodha_cvp.pdf" download="umesh_lodha_cvp.pdf" class="button">Download CV</a>
                     <a href="#contact" class="button">Contact</a>
                 </div>
 
